Test Case Fixed and Code Fixed